--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Discord.js-Ex Guide
 author: efficiency-org
 email: efficiency.organization@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  An easier and more compact way to use Discord.js!
+  An easier, simpler, and more compact way to use Discord.js!
   ...
   But, how DO you use it? Let's find out!
 
