--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,3 @@
 # Code Owner For 42
-* @efficiency-org
+# (Efficiency-Org Members And Former Members)
+* @efficiency-org @JavascriptLearner815 @timmy61109 @Androz2091
